--- a/css/main.scss
+++ b/css/main.scss
@@ -14,7 +14,7 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #404040;
+$text-color:       rgba(0,0,0,.8);
 $background-color: #fdfdfd;
 $brand-color:      #3aa0d1;
 
@@ -25,7 +25,7 @@ $grey-color-dark:  darken($grey-color, 25%);
 $code-syntax-background:      rgba($brand-color,0.1);
 
 // Width of the content area
-$content-width:    700px;
+$content-width:    750px;
 $header-content-width:    900px;
 
 $on-palm:          600px;
